# VOR

./: .gitignore  Cargo.toml  Example_App_Config.json  README.md
Premade-Configs/Apps/VRCFaceTracking/: LocalSettings.json  VOR-VRCFT.json
Premade-Configs/Apps/bHaptics/: Connection.cfg  VOR-bHaptics.json
Premade-Configs/PF/Filter VRChat Spam/: VOR_PF.json  about.md
docs/: example.md
src/: config.rs  main.rs  pf.rs  routedbg.rs  routing.rs  ui.rs  vorerr.rs  vorupdate.rs  vorutils.rs
wix/: main.wxs
