[package]
name = "vor"
version = "0.1.4"
edition = "2021"
authors = ["SutekhVRC"]

[dependencies]
rosc = "0.7.0"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
directories = "4.0.1"
eframe = "0.17.0"
tokio = {version = "1.17.0", features = ["sync"]}
clap = {version = "3.1.17", features = ["derive"]}