[package]
name = "vor"
version = "0.2.0"
edition = "2021"
authors = ["SutekhVRC"]

[dependencies]
rosc = "0.7.0"
eframe = "0.18.0"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
directories = "4.0.1"
tokio = {version = "1.20.0", features = ["sync", "rt-multi-thread", "net"]}
clap = {version = "3.1.17", features = ["derive"]}
reqwest = {version = "0.11.11", features = ["blocking"]}